# lem-in

./: .gitignore  .gitmodules  1.txt  11  11.txt  CMakeLists.txt  Makefile  animation.c  big  big1.txt  big2.txt  check.sh  cycle.sh  draw_line.c  exit.c  file  file1  file2  file3  file4  file5  file6  file7  file8  file9  generator1.txt  generator2.txt  generator3.txt  generator4.txt  generator5.txt  getmap.c  keyboard.c  lem-in  lem_im  lem_in  lemin.h  main.c  map  map100  map42  (+23 more)
animation/: animation.h  animation_destroy.c  move_ants.c  print_ants.c  private_get_ants_ways.c  rotate_ants.c  shift_ants.c
control/: keyboard.c  mouse.c
coord/: coord.h  coord.h.gch
data/: data.h  data_create.c  data_destroy.c  private_add_z.c  private_create_links.c  private_data.h  private_del_dead_lines.c  private_get_flags.c  private_mark_ways.c
graph/: graph_create.c  graph_destroy.c  private_create_rooms_map.c  private_get_links.c  private_get_rooms_and_coords.c  private_graph.h
hashtable/: hashtable.h  hashtable_create.c  hashtable_find.c  hashtable_insert.c  hashtable_private.c  hashtable_private.h
images/: end.xpm
includes/: ft_buf.h  graph.h  hash_table.h  lem_in.h  parsing.h  turn.h  ways.h
includes_lem/: ft_buf.h  graph.h  hash_table.h  lem_in.h  parsing.h  ways.h
includes_viz/: animation.h  data.h  flags.h  graph.h  hashtable_private.h  lemin.h  map.h  private_animation.h  private_data.h  private_graph.h  room.h  tree.h  vector.h
input/: get_graph.c  get_input.c
map/: big  bigsuper  bigsuper1  draw_map.c  haha  map.h  map_git3  my_own  my_own2  my_own3  my_own4  my_own5  my_own6  private_map.h  put_info.c  rotate_map.c  ssoraka  test  test_bigsuper
maps/: lem_im  map100k-m  map20k-m  map50k-m
maps_for_lem-in/: 1  11  2  one  ssoraka  two
srcs/: algo.c  bfs.c  buf_add_chr.c  buf_add_str.c  buf_destroy.c  buf_flush.c  buf_flush_to.c  buf_get.c  buf_init.c  check_links.c  check_of_rooms.c  data.c  dijkstra_list.c  dijkstra_modifide.c  ft_malloc_store.c  ft_strsplit1.c  garbage.c  get_next_line1.c  get_next_line_part_two.c  graph.c  hash_table.c  hash_table_malloc.c  lem_in.c  (+13 more)
(+111 files in other folders)
